--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.5.0
   provider: ^6.0.0
   shared_preferences: ^2.1.0
+  overlay_support: ^2.0.1
 
 dev_dependencies:
   flutter_test:
